users follow and unfollow each others
